styles(fronted): colors, layout and utilities

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -1,2 +1,11 @@
+@import '../../../../../node_modules/the-new-css-reset/css/reset.css';
+
 @import './global/font-faces';
 @import './global/fonts';
+@import './global/theme';
+@import './global/variables';
+@import './global/colors';
+@import './global/layout';
+@import './global/body';
+
+@import './utilities/display';
