styles(fronted): utilities and signin

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -9,3 +9,10 @@
 @import './global/body';
 
 @import './utilities/display';
+@import './utilities/text';
+@import './utilities/flex';
+@import './utilities/justify-content';
+@import './utilities/align-items';
+@import './utilities/flex-direction';
+@import './utilities/padding';
+@import './utilities/margin';
