styles(fronted): style sign in page and more css utils and tweaks

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -7,6 +7,7 @@
 @import './global/colors';
 @import './global/layout';
 @import './global/body';
+@import './global/button';
 
 @import './utilities/display';
 @import './utilities/text';
@@ -16,3 +17,4 @@
 @import './utilities/flex-direction';
 @import './utilities/padding';
 @import './utilities/margin';
+@import './utilities/text';
