--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -1,6 +1,7 @@
 :root {
 	// https://www.color-name.com
 	--color-ghost-white: #fcfaf6;
+	--color-white: #ffffff;
 	--color-vampire-black: #07100a;
 	--color-interdimensional-blue: #3b00b9;
 }
