--- a/src/frontend/src/lib/styles/global/variables.scss
+++ b/src/frontend/src/lib/styles/global/variables.scss
@@ -8,4 +8,7 @@
 	--padding-2x: calc(var(--padding) * 2);
 	--padding-3x: calc(var(--padding) * 3);
 	--padding-4x: calc(var(--padding) * 4);
+	--padding-8x: calc(var(--padding) * 8);
+
+	--border-radius: 10px;
 }
