--- a/src/frontend/src/lib/styles/global/fonts.scss
+++ b/src/frontend/src/lib/styles/global/fonts.scss
@@ -20,7 +20,6 @@ h4,
 h5 {
 	font-weight: 800;
 	line-height: var(--line-height-title);
-	margin: 0 0 var(--padding);
 }
 
 input,
@@ -41,10 +40,11 @@ textarea {
 	--font-size-very-small: 0.79rem;
 	--font-size-ultra-small: 0.6rem;
 
+	--line-height-small: 1.1;
 	--line-height-title: 1.3;
 	--line-height-standard: 1.5;
 
-	--font-weight-bold: 800;
+	--font-weight-bold: 500;
 }
 
 h1 {
