--- a/src/frontend/src/lib/styles/utilities/margin.scss
+++ b/src/frontend/src/lib/styles/utilities/margin.scss
@@ -43,3 +43,9 @@ $property: margin;
 @include utilities.generate(mx-4, #{$property}-right, var(--padding-4x));
 @include utilities.generate(my-4, #{$property}-top, var(--padding-4x));
 @include utilities.generate(my-4, #{$property}-bottom, var(--padding-4x));
+
+@include utilities.generate(m-8, $property, var(--padding-8x));
+@include utilities.generate(mx-8, #{$property}-left, var(--padding-8x));
+@include utilities.generate(mx-8, #{$property}-right, var(--padding-8x));
+@include utilities.generate(my-8, #{$property}-top, var(--padding-8x));
+@include utilities.generate(my-8, #{$property}-bottom, var(--padding-8x));
