style(frontend): add a hero slot

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -18,3 +18,7 @@
 @import './utilities/padding';
 @import './utilities/margin';
 @import './utilities/text';
+@import './utilities/color';
+@import './utilities/background';
+@import './utilities/border-radius';
+@import './utilities/position';
