--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -10,7 +10,7 @@ button {
 	background: var(--color-white);
 
 	border: 1px solid var(--color-interdimensional-blue);
-	border-radius: var(--border-radius);
+	border-radius: var(--border-radius-sm);
 
 	padding: var(--padding) var(--padding-3x);
 
