--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -4,4 +4,5 @@
 	--color-white: #ffffff;
 	--color-vampire-black: #07100a;
 	--color-interdimensional-blue: #3b00b9;
+	--color-deep-violet: #1e005d;
 }
