--- a/src/frontend/src/lib/styles/global/variables.scss
+++ b/src/frontend/src/lib/styles/global/variables.scss
@@ -10,5 +10,6 @@
 	--padding-4x: calc(var(--padding) * 4);
 	--padding-8x: calc(var(--padding) * 8);
 
-	--border-radius: 10px;
+	--border-radius-sm: 10px;
+	--border-radius-lg: 32px;
 }
