feat(frontend): progress loader

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -8,6 +8,7 @@
 @import './global/layout';
 @import './global/body';
 @import './global/button';
+@import './global/gix';
 
 @import './utilities/display';
 @import './utilities/text';
