--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -23,3 +23,4 @@
 @import './utilities/background';
 @import './utilities/border-radius';
 @import './utilities/position';
+@import './utilities/gap';
