--- a/src/frontend/src/lib/styles/global/layout.scss
+++ b/src/frontend/src/lib/styles/global/layout.scss
@@ -5,7 +5,7 @@ main {
 	padding: 0 var(--padding-2x);
 
 	@include media.min-width(small) {
-		max-width: media.$breakpoint-xsmall;
+		max-width: media.$breakpoint-small;
 	}
 }
 
