--- a/src/frontend/src/lib/styles/utilities/margin.scss
+++ b/src/frontend/src/lib/styles/utilities/margin.scss
@@ -7,45 +7,61 @@ $property: margin;
 @include utilities.generate(mx-0\.25, #{$property}-right, var(--padding-0_25x));
 @include utilities.generate(my-0\.25, #{$property}-top, var(--padding-0_25x));
 @include utilities.generate(my-0\.25, #{$property}-bottom, var(--padding-0_25x));
+@include utilities.generate(mt-0\.25, #{$property}-top, var(--padding-0_25x));
+@include utilities.generate(mb-0\.25, #{$property}-bottom, var(--padding-0_25x));
 
 @include utilities.generate(m-0\.5, $property, var(--padding-0_5x));
 @include utilities.generate(mx-0\.5, #{$property}-left, var(--padding-0_5x));
 @include utilities.generate(mx-0\.5, #{$property}-right, var(--padding-0_5x));
 @include utilities.generate(my-0\.5, #{$property}-top, var(--padding-0_5x));
 @include utilities.generate(my-0\.5, #{$property}-bottom, var(--padding-0_5x));
+@include utilities.generate(mt-0\.5, #{$property}-top, var(--padding-0_5x));
+@include utilities.generate(mb-0\.5, #{$property}-bottom, var(--padding-0_5x));
 
 @include utilities.generate(m-1, $property, var(--padding));
 @include utilities.generate(mx-1, #{$property}-left, var(--padding));
 @include utilities.generate(mx-1, #{$property}-right, var(--padding));
 @include utilities.generate(my-1, #{$property}-top, var(--padding));
 @include utilities.generate(my-1, #{$property}-bottom, var(--padding));
+@include utilities.generate(mt-1, #{$property}-top, var(--padding));
+@include utilities.generate(mb-1, #{$property}-bottom, var(--padding));
 
 @include utilities.generate(m-1\.5, $property, var(--padding-1_5x));
 @include utilities.generate(mx-1\.5, #{$property}-left, var(--padding-1_5x));
 @include utilities.generate(mx-1\.5, #{$property}-right, var(--padding-1_5x));
 @include utilities.generate(my-1\.5, #{$property}-top, var(--padding-1_5x));
 @include utilities.generate(my-1\.5, #{$property}-bottom, var(--padding-1_5x));
+@include utilities.generate(mt-1\.5, #{$property}-top, var(--padding-1_5x));
+@include utilities.generate(mb-1\.5, #{$property}-bottom, var(--padding-1_5x));
 
 @include utilities.generate(m-2, $property, var(--padding-2x));
 @include utilities.generate(mx-2, #{$property}-left, var(--padding-2x));
 @include utilities.generate(mx-2, #{$property}-right, var(--padding-2x));
 @include utilities.generate(my-2, #{$property}-top, var(--padding-2x));
 @include utilities.generate(my-2, #{$property}-bottom, var(--padding-2x));
+@include utilities.generate(mt-2, #{$property}-top, var(--padding-2x));
+@include utilities.generate(mb-2, #{$property}-bottom, var(--padding-2x));
 
 @include utilities.generate(m-3, $property, var(--padding-3x));
 @include utilities.generate(mx-3, #{$property}-left, var(--padding-3x));
 @include utilities.generate(mx-3, #{$property}-right, var(--padding-3x));
 @include utilities.generate(my-3, #{$property}-top, var(--padding-3x));
 @include utilities.generate(my-3, #{$property}-bottom, var(--padding-3x));
+@include utilities.generate(mt-3, #{$property}-top, var(--padding-3x));
+@include utilities.generate(mb-3, #{$property}-bottom, var(--padding-3x));
 
 @include utilities.generate(m-4, $property, var(--padding-4x));
 @include utilities.generate(mx-4, #{$property}-left, var(--padding-4x));
 @include utilities.generate(mx-4, #{$property}-right, var(--padding-4x));
 @include utilities.generate(my-4, #{$property}-top, var(--padding-4x));
 @include utilities.generate(my-4, #{$property}-bottom, var(--padding-4x));
+@include utilities.generate(mt-4, #{$property}-top, var(--padding-4x));
+@include utilities.generate(mb-4, #{$property}-bottom, var(--padding-4x));
 
 @include utilities.generate(m-8, $property, var(--padding-8x));
 @include utilities.generate(mx-8, #{$property}-left, var(--padding-8x));
 @include utilities.generate(mx-8, #{$property}-right, var(--padding-8x));
 @include utilities.generate(my-8, #{$property}-top, var(--padding-8x));
 @include utilities.generate(my-8, #{$property}-bottom, var(--padding-8x));
+@include utilities.generate(mt-8, #{$property}-top, var(--padding-8x));
+@include utilities.generate(mb-8, #{$property}-bottom, var(--padding-8x));
