--- a/src/frontend/src/lib/styles/utilities/padding.scss
+++ b/src/frontend/src/lib/styles/utilities/padding.scss
@@ -7,45 +7,61 @@ $property: padding;
 @include utilities.generate(px-0\.25, #{$property}-right, var(--padding-0_25x));
 @include utilities.generate(py-0\.25, #{$property}-top, var(--padding-0_25x));
 @include utilities.generate(py-0\.25, #{$property}-bottom, var(--padding-0_25x));
+@include utilities.generate(pt-0\.25, #{$property}-top, var(--padding-0_25x));
+@include utilities.generate(pb-0\.25, #{$property}-bottom, var(--padding-0_25x));
 
 @include utilities.generate(p-0\.5, $property, var(--padding-0_5x));
 @include utilities.generate(px-0\.5, #{$property}-left, var(--padding-0_5x));
 @include utilities.generate(px-0\.5, #{$property}-right, var(--padding-0_5x));
 @include utilities.generate(py-0\.5, #{$property}-top, var(--padding-0_5x));
 @include utilities.generate(py-0\.5, #{$property}-bottom, var(--padding-0_5x));
+@include utilities.generate(pt-0\.5, #{$property}-top, var(--padding-0_5x));
+@include utilities.generate(pb-0\.5, #{$property}-bottom, var(--padding-0_5x));
 
 @include utilities.generate(p-1, $property, var(--padding));
 @include utilities.generate(px-1, #{$property}-left, var(--padding));
 @include utilities.generate(px-1, #{$property}-right, var(--padding));
 @include utilities.generate(py-1, #{$property}-top, var(--padding));
 @include utilities.generate(py-1, #{$property}-bottom, var(--padding));
+@include utilities.generate(pt-1, #{$property}-top, var(--padding));
+@include utilities.generate(pb-1, #{$property}-bottom, var(--padding));
 
 @include utilities.generate(p-1\.5, $property, var(--padding-1_5x));
 @include utilities.generate(px-1\.5, #{$property}-left, var(--padding-1_5x));
 @include utilities.generate(px-1\.5, #{$property}-right, var(--padding-1_5x));
 @include utilities.generate(py-1\.5, #{$property}-top, var(--padding-1_5x));
 @include utilities.generate(py-1\.5, #{$property}-bottom, var(--padding-1_5x));
+@include utilities.generate(pt-1\.5, #{$property}-top, var(--padding-1_5x));
+@include utilities.generate(pb-1\.5, #{$property}-bottom, var(--padding-1_5x));
 
 @include utilities.generate(p-2, $property, var(--padding-2x));
 @include utilities.generate(px-2, #{$property}-left, var(--padding-2x));
 @include utilities.generate(px-2, #{$property}-right, var(--padding-2x));
 @include utilities.generate(py-2, #{$property}-top, var(--padding-2x));
 @include utilities.generate(py-2, #{$property}-bottom, var(--padding-2x));
+@include utilities.generate(pt-2, #{$property}-top, var(--padding-2x));
+@include utilities.generate(pb-2, #{$property}-bottom, var(--padding-2x));
 
 @include utilities.generate(p-3, $property, var(--padding-3x));
 @include utilities.generate(px-3, #{$property}-left, var(--padding-3x));
 @include utilities.generate(px-3, #{$property}-right, var(--padding-3x));
 @include utilities.generate(py-3, #{$property}-top, var(--padding-3x));
 @include utilities.generate(py-3, #{$property}-bottom, var(--padding-3x));
+@include utilities.generate(pt-3, #{$property}-top, var(--padding-3x));
+@include utilities.generate(pb-3, #{$property}-bottom, var(--padding-3x));
 
 @include utilities.generate(p-4, $property, var(--padding-4x));
 @include utilities.generate(px-4, #{$property}-left, var(--padding-4x));
 @include utilities.generate(px-4, #{$property}-right, var(--padding-4x));
 @include utilities.generate(py-4, #{$property}-top, var(--padding-4x));
 @include utilities.generate(py-4, #{$property}-bottom, var(--padding-4x));
+@include utilities.generate(pt-4, #{$property}-top, var(--padding-4x));
+@include utilities.generate(pb-4, #{$property}-bottom, var(--padding-4x));
 
 @include utilities.generate(p-8, $property, var(--padding-8x));
 @include utilities.generate(px-8, #{$property}-left, var(--padding-8x));
 @include utilities.generate(px-8, #{$property}-right, var(--padding-8x));
 @include utilities.generate(py-8, #{$property}-top, var(--padding-8x));
 @include utilities.generate(py-8, #{$property}-bottom, var(--padding-8x));
+@include utilities.generate(pt-8, #{$property}-top, var(--padding-8x));
+@include utilities.generate(pb-8, #{$property}-bottom, var(--padding-8x));
