feat(frontend): balance in hero, improve sign out ux and copy

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -8,6 +8,7 @@
 @import './global/layout';
 @import './global/body';
 @import './global/button';
+@import './global/text';
 @import './global/gix';
 
 @import './utilities/display';
@@ -24,3 +25,6 @@
 @import './utilities/border-radius';
 @import './utilities/position';
 @import './utilities/gap';
+@import './utilities/opacity';
+@import './utilities/font-weight';
+@import './utilities/word-break';
