feat(frontend): style activity and display expected values

--- a/src/frontend/src/lib/styles/global/theme.scss
+++ b/src/frontend/src/lib/styles/global/theme.scss
@@ -127,7 +127,8 @@ figcaption {
 }
 
 ::-webkit-scrollbar-thumb {
-	border-radius: 0;
+	border-radius: 0.5em;
+	-webkit-border-radius: 0.5em;
 	background-color: var(--color-interdimensional-blue);
 }
 
