--- a/src/frontend/src/lib/styles/utilities/border-radius.scss
+++ b/src/frontend/src/lib/styles/utilities/border-radius.scss
@@ -2,3 +2,4 @@
 
 @include utilities.generate(rounded-sm, border-radius, var(--border-radius-sm));
 @include utilities.generate(rounded-lg, border-radius, var(--border-radius-lg));
+@include utilities.generate(rounded-50, border-radius, 50%);
