--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -10,6 +10,7 @@
 @import './global/button';
 @import './global/text';
 @import './global/gix';
+@import './global/position';
 
 @import './utilities/display';
 @import './utilities/text';
@@ -28,3 +29,4 @@
 @import './utilities/opacity';
 @import './utilities/font-weight';
 @import './utilities/word-break';
+@import './utilities/line-height';
