--- a/src/frontend/src/lib/styles/utilities/gap.scss
+++ b/src/frontend/src/lib/styles/utilities/gap.scss
@@ -5,8 +5,8 @@ $property: gap;
 @include utilities.generate(gap-0\.25, $property, var(--padding-0_25x));
 @include utilities.generate(gap-0\.5, $property, var(--padding-0_5x));
 @include utilities.generate(gap-1, $property, var(--padding));
-@include utilities.generate(gap-1\.5, #{$property}-bottom, var(--padding-1_5x));
-@include utilities.generate(gap-2, #{$property}-bottom, var(--padding-2x));
-@include utilities.generate(gap-3, #{$property}-bottom, var(--padding-3x));
-@include utilities.generate(gap-4, #{$property}-bottom, var(--padding-4x));
-@include utilities.generate(gap-8, #{$property}-bottom, var(--padding-8x));
+@include utilities.generate(gap-1\.5, #{$property}, var(--padding-1_5x));
+@include utilities.generate(gap-2, #{$property}, var(--padding-2x));
+@include utilities.generate(gap-3, #{$property}, var(--padding-3x));
+@include utilities.generate(gap-4, #{$property}, var(--padding-4x));
+@include utilities.generate(gap-8, #{$property}, var(--padding-8x));
