feat(frontend): header with sign in

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -16,6 +16,7 @@
 @import './utilities/text';
 @import './utilities/flex';
 @import './utilities/justify-content';
+@import './utilities/justify-self';
 @import './utilities/align-items';
 @import './utilities/flex-direction';
 @import './utilities/padding';
