feat(frontend): sign out

--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -5,4 +5,6 @@
 	--color-vampire-black: #07100a;
 	--color-interdimensional-blue: #3b00b9;
 	--color-deep-violet: #1e005d;
+	--color-cetacean-blue: #0e002d;
+	--color-dark-slate-blue: #503a83;
 }
