--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -11,3 +11,5 @@ $property: background;
 	var(--color-interdimensional-blue)
 );
 @include utilities.generate(bg-deep-violet, $property, var(--color-deep-violet));
+@include utilities.generate(bg-cetacean-blue, $property, var(--color-cetacean-blue));
+@include utilities.generate(bg-dark-slate-blue, $property, var(--color-dark-slate-blue));
