--- a/src/frontend/src/lib/styles/utilities/color.scss
+++ b/src/frontend/src/lib/styles/utilities/color.scss
@@ -11,3 +11,5 @@ $property: color;
 	var(--color-interdimensional-blue)
 );
 @include utilities.generate(text-deep-violet, $property, var(--color-deep-violet));
+@include utilities.generate(text-cetacean-blue, $property, var(--color-cetacean-blue));
+@include utilities.generate(text-dark-slate-blue, $property, var(--color-dark-slate-blue));
