--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -29,5 +29,6 @@
 @import './utilities/gap';
 @import './utilities/opacity';
 @import './utilities/font-weight';
+@import './utilities/font-size';
 @import './utilities/word-break';
 @import './utilities/line-height';
