--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -7,4 +7,5 @@
 	--color-deep-violet: #1e005d;
 	--color-cetacean-blue: #0e002d;
 	--color-dark-slate-blue: #503a83;
+	--color-goldenrod: #dfa81b;
 }
