feat(frontend): toast warn

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -2,6 +2,10 @@
 	--positive-emphasis: #30af91;
 	--positive-emphasis-rgb: 48, 175, 145;
 
+	--warning-emphasis-shade: var(--color-goldenrod);
+
+	--negative-emphasis: var(--color-cyclamen);
+
 	--tertiary: var(--color-deep-violet);
 
 	--value-color: var(--color-vampire-black);
