--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -14,3 +14,4 @@ $property: background;
 @include utilities.generate(bg-cetacean-blue, $property, var(--color-cetacean-blue));
 @include utilities.generate(bg-dark-slate-blue, $property, var(--color-dark-slate-blue));
 @include utilities.generate(bg-goldenrod, $property, var(--color-goldenrod));
+@include utilities.generate(bg-cyclamen, $property, var(--color-cyclamen));
