--- a/src/frontend/src/lib/styles/utilities/color.scss
+++ b/src/frontend/src/lib/styles/utilities/color.scss
@@ -14,3 +14,4 @@ $property: color;
 @include utilities.generate(text-cetacean-blue, $property, var(--color-cetacean-blue));
 @include utilities.generate(text-dark-slate-blue, $property, var(--color-dark-slate-blue));
 @include utilities.generate(text-goldenrod, $property, var(--color-goldenrod));
+@include utilities.generate(text-cyclamen, $property, var(--color-cyclamen));
