--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -1,30 +1,46 @@
-button.primary {
+button {
 	display: flex;
-	justify-content: flex-start;
 	align-items: center;
 
-	gap: var(--padding-2x);
+	gap: var(--padding);
 
 	cursor: pointer;
 
-	background: var(--color-white);
-
-	border: 1px solid var(--color-interdimensional-blue);
 	border-radius: var(--border-radius-sm);
 
-	padding: var(--padding) var(--padding-3x);
+	transition: color 0.25s ease-out, background 0.25s ease-out, opacity 0.25s ease-out;
 
-	span {
-		display: block;
-		line-height: var(--line-height-small);
+	&.primary {
+		justify-content: flex-start;
 
-		span:first-child {
-			color: var(--color-interdimensional-blue);
+		background: var(--color-white);
+
+		border: 1px solid var(--color-interdimensional-blue);
+
+		padding: var(--padding) var(--padding-3x);
+	}
+
+	&.labelled {
+		span {
+			display: block;
+			line-height: var(--line-height-small);
+
+			span:first-child {
+				color: var(--color-interdimensional-blue);
+			}
+
+			span:last-child {
+				font-weight: var(--font-weight-bold);
+				font-size: var(--font-size-h5);
+			}
 		}
+	}
 
-		span:last-child {
-			font-weight: var(--font-weight-bold);
-			font-size: var(--font-size-h5);
-		}
+	&.secondary {
+		justify-content: center;
+
+		background: var(--color-ghost-white);
+
+		padding: var(--padding-1_5x) var(--padding-3x);
 	}
 }
