--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -1,3 +1,5 @@
+@use '../mixins/media';
+
 :root {
 	--positive-emphasis: #30af91;
 	--positive-emphasis-rgb: 48, 175, 145;
@@ -10,6 +12,7 @@
 
 	--value-color: var(--color-vampire-black);
 
+	--border-radius-2x: var(--border-radius-lg);
 	--border-radius-0_5x: calc(0.5 * var(--border-radius-sm));
 	--border-radius: var(--border-radius-sm);
 
@@ -21,6 +24,56 @@
 
 	--overlay-background: var(--color-ghost-white);
 	--overlay-background-contrast: var(--color-vampire-black);
+
+	--overlay-z-index: calc(var(--z-index) + 1);
+	--modal-z-index: calc(var(--overlay-z-index) + 3);
+
+	--overlay-box-shadow: 0px 0px 8px rgba(var(--box-shadow-color-rgb), 0.2);
+
+	// Modal
+
+	--alert-width: calc(100% - var(--padding-8x));
+	--alert-max-width: calc(100vw - var(--padding-4x));
+	--alert-max-height: calc(100vh - var(--padding-4x));
+	--alert-border-radius: var(--border-radius-2x);
+	--alert-padding-y: var(--padding-4x);
+	--alert-padding-x: var(--padding-2x);
+
+	--dialog-width: 100vw;
+	--dialog-max-width: 100vw;
+	--dialog-height: 100vh;
+	--dialog-border-radius: 0;
+	--dialog-padding-y: var(--padding-4x);
+	--dialog-padding-x: var(--padding-2x);
+
+	// CSS variables used when the content needs to fit the maximum height as when a QR-Code reader is embedded in a modal
+	--dialog-header-height: 74px;
+
+	@supports (-webkit-touch-callout: none) {
+		--dialog-height: -webkit-fill-available;
+		--alert-max-height: -webkit-fill-available;
+	}
+
+	@include media.min-width(medium) {
+		--alert-width: 500px;
+
+		--dialog-width: 600px;
+		--dialog-max-width: var(--alert-max-width);
+		--dialog-min-height: calc(100vh - var(--padding-8x));
+		--dialog-height: initial;
+		--dialog-max-height: var(--alert-max-height);
+		--dialog-border-radius: var(--alert-border-radius);
+		--dialog-padding-x: var(--padding-4x);
+	}
+
+	@media (min-width: 768px) and (min-height: 560px) {
+		--dialog-min-height: 554.25px;
+	}
+
+	// Overlays - based on --color-cetacean-blue
+	--backdrop: rgba(14, 0, 45, 0.6);
+	--backdrop-contrast: var(--color-vampire-black);
+	--backdrop-filter: blur(4px);
 }
 
 article.gix {
