--- a/src/frontend/src/lib/styles/utilities/word-break.scss
+++ b/src/frontend/src/lib/styles/utilities/word-break.scss
@@ -1,3 +1,3 @@
 @use '../mixins/utilities';
 
-@include utilities.generate(break-words, overflow-wrap, break-word);
+@include utilities.generate(break-words, word-break, break-word);
