--- a/src/frontend/src/lib/styles/global/variables.scss
+++ b/src/frontend/src/lib/styles/global/variables.scss
@@ -12,4 +12,7 @@
 
 	--border-radius-sm: 10px;
 	--border-radius-lg: 32px;
+
+	// Overlays - based on --color-cetacean-blue
+	--backdrop: rgba(14, 0, 45, 0.6);
 }
