--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -32,6 +32,14 @@
 
 	--overlay-box-shadow: 0px 0px 8px rgba(var(--box-shadow-color-rgb), 0.2);
 
+	// Input
+	--input-background: var(--color-white);
+	--focus-background: var(--color-white);
+	--input-border-color: #e9e7e3;
+	--input-border-size: 1px;
+	--animation-time-short: 0.2s;
+	--secondary: var(--color-dark-slate-blue);
+
 	// Modal
 
 	--alert-width: calc(100% - var(--padding-8x));
@@ -81,4 +89,16 @@ article.gix {
 		color: inherit;
 		cursor: pointer;
 	}
+}
+
+label + div[class*='input-block'] {
+	margin: calc(-1 * var(--padding-0_25x)) 0 var(--padding-2x);
+}
+
+div.input-field input[id] {
+	padding: var(--padding-1_5x);
+}
+
+div.input-field input[id]::placeholder {
+	color: rgba(0, 0, 0, 0.4);
 }
