--- a/src/frontend/src/lib/styles/global/variables.scss
+++ b/src/frontend/src/lib/styles/global/variables.scss
@@ -4,6 +4,7 @@
 	--padding-0_25x: calc(var(--padding) / 4);
 	--padding-0_5x: calc(var(--padding) / 2);
 	--padding: 0.45rem;
+	--padding-1_25x: calc(var(--padding) * 1.25);
 	--padding-1_5x: calc(var(--padding) * 1.5);
 	--padding-2x: calc(var(--padding) * 2);
 	--padding-3x: calc(var(--padding) * 3);
