feat: show toast on disconnect

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -8,6 +8,7 @@
 
 	--negative-emphasis: var(--color-cyclamen);
 
+	--primary: var(--color-interdimensional-blue);
 	--tertiary: var(--color-deep-violet);
 
 	--value-color: var(--color-vampire-black);
