feat(frontend): display QR code in hero pane if balance is zero

--- a/src/frontend/src/lib/styles/utilities/display.scss
+++ b/src/frontend/src/lib/styles/utilities/display.scss
@@ -4,3 +4,4 @@ $property: display;
 
 @include utilities.generate(hidden, $property, none);
 @include utilities.generate(block, $property, block);
+@include utilities.generate(flex, $property, flex);
