--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -55,4 +55,13 @@ button {
 		max-width: calc(100% - var(--padding-8x));
 		width: 100%;
 	}
+
+	&.tab {
+		justify-content: center;
+		border-radius: 0;
+
+		background: var(--color-ghost-white);
+
+		padding: var(--padding-1_5x) var(--padding-3x);
+	}
 }
