style(frontend): login page

--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -7,6 +7,7 @@
 	--color-deep-violet: #1e005d;
 	--color-cetacean-blue: #0e002d;
 	--color-dark-slate-blue: #503a83;
+	--color-misty-rose: #937993;
 	--color-goldenrod: #dfa81b;
 	--color-cyclamen: #ea6c99;
 }
