--- a/src/frontend/src/lib/styles/global/layout.scss
+++ b/src/frontend/src/lib/styles/global/layout.scss
@@ -5,6 +5,12 @@ main {
 	padding: 0 var(--padding-2x);
 
 	@include media.min-width(small) {
-		max-width: media.$breakpoint-small;
+		max-width: media.$breakpoint-medium;
+	}
+
+	&.in {
+		@include media.min-width(small) {
+			max-width: media.$breakpoint-small;
+		}
 	}
 }
