--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -13,5 +13,6 @@ $property: background;
 @include utilities.generate(bg-deep-violet, $property, var(--color-deep-violet));
 @include utilities.generate(bg-cetacean-blue, $property, var(--color-cetacean-blue));
 @include utilities.generate(bg-dark-slate-blue, $property, var(--color-dark-slate-blue));
+@include utilities.generate(bg-misty-rose, $property, var(--color-misty-rose));
 @include utilities.generate(bg-goldenrod, $property, var(--color-goldenrod));
 @include utilities.generate(bg-cyclamen, $property, var(--color-cyclamen));
