style(frontend): login page

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -14,6 +14,7 @@
 
 @import './utilities/display';
 @import './utilities/text';
+@import './utilities/text-decoration';
 @import './utilities/flex';
 @import './utilities/justify-content';
 @import './utilities/justify-self';
