feat: login background

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -33,3 +33,4 @@
 @import './utilities/font-size';
 @import './utilities/word-break';
 @import './utilities/line-height';
+@import './utilities/z-index';
