--- a/src/frontend/src/lib/styles/utilities/opacity.scss
+++ b/src/frontend/src/lib/styles/utilities/opacity.scss
@@ -3,6 +3,7 @@
 $property: opacity;
 
 @include utilities.generate(opacity-0, $property, 0);
+@include utilities.generate(opacity-5, $property, 0.05);
 @include utilities.generate(opacity-15, $property, 0.15);
 @include utilities.generate(opacity-50, $property, 0.5);
 @include utilities.generate(opacity-75, $property, 0.75);
