--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -5,6 +5,7 @@ $property: background;
 @include utilities.generate(bg-inherit, $property, inherit);
 @include utilities.generate(bg-vampire-black, $property, var(--color-vampire-black));
 @include utilities.generate(bg-ghost-white, $property, var(--color-ghost-white));
+@include utilities.generate(bg-white, $property, var(--color-white));
 @include utilities.generate(
 	bg-interdimensional-blue,
 	$property,
@@ -13,5 +14,6 @@ $property: background;
 @include utilities.generate(bg-deep-violet, $property, var(--color-deep-violet));
 @include utilities.generate(bg-cetacean-blue, $property, var(--color-cetacean-blue));
 @include utilities.generate(bg-dark-slate-blue, $property, var(--color-dark-slate-blue));
+@include utilities.generate(bg-misty-rose, $property, var(--color-misty-rose));
 @include utilities.generate(bg-goldenrod, $property, var(--color-goldenrod));
 @include utilities.generate(bg-cyclamen, $property, var(--color-cyclamen));
