feat: remove tab and init page

--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -2,6 +2,7 @@
 	// https://www.color-name.com
 	--color-ghost-white: #fcfaf6;
 	--color-white: #ffffff;
+	--color-grey: #c0bbc4;
 	--color-vampire-black: #07100a;
 	--color-interdimensional-blue: #3b00b9;
 	--color-deep-violet: #1e005d;
