--- a/src/frontend/src/lib/styles/global/fonts.scss
+++ b/src/frontend/src/lib/styles/global/fonts.scss
@@ -44,7 +44,15 @@ textarea {
 	--line-height-title: 1.3;
 	--line-height-standard: 1.5;
 
-	--font-weight-bold: 500;
+	--font-weight-bold: 700;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-weight: var(--font-weight-bold);
 }
 
 h1 {
