--- a/src/frontend/src/lib/styles/global/font-faces.scss
+++ b/src/frontend/src/lib/styles/global/font-faces.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: CircularXX;
-	src: url('/fonts/CircularXXWeb-Regular.woff2') format('woff2');
+	src: url('/fonts/CircularXXWeb-Regular.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -8,8 +8,8 @@
 
 @font-face {
 	font-family: CircularXX;
-	src: url('/fonts/CircularXXWeb-Book.woff2') format('woff2');
-	font-weight: 450;
+	src: url('/fonts/CircularXXWeb-Bold.woff') format('woff');
+	font-weight: 700;
 	font-style: normal;
 	font-display: swap;
 }
