feat: logo color

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -23,7 +23,7 @@
 	--progress-color-contrast: var(--color-white);
 	--progress-color-rgb: 59, 0, 185;
 
-	--overlay-background: var(--color-ghost-white);
+	--overlay-background: var(--color-off-white);
 	--overlay-background-contrast: var(--color-vampire-black);
 
 	--overlay-z-index: calc(var(--z-index) + 1);
