--- a/src/frontend/src/lib/styles/global/theme.scss
+++ b/src/frontend/src/lib/styles/global/theme.scss
@@ -118,12 +118,12 @@ figcaption {
 
 ::selection {
 	background: var(--color-interdimensional-blue);
-	color: var(--color-ghost-white);
+	color: var(--color-off-white);
 }
 
 ::-moz-selection {
 	background: var(--color-interdimensional-blue);
-	color: var(--color-ghost-white);
+	color: var(--color-off-white);
 }
 
 ::-webkit-scrollbar-thumb {
