--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -39,7 +39,7 @@ button {
 	&.secondary {
 		justify-content: center;
 
-		background: var(--color-ghost-white);
+		background: var(--color-off-white);
 
 		padding: var(--padding-1_5x) var(--padding-3x);
 	}
@@ -48,7 +48,7 @@ button {
 		justify-content: center;
 
 		background: var(--color-interdimensional-blue);
-		color: var(--color-ghost-white);
+		color: var(--color-off-white);
 
 		padding: var(--padding-1_5x) var(--padding-3x);
 
