--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -1,6 +1,5 @@
 :root {
-	// https://www.color-name.com
-	--color-ghost-white: #fcfaf6;
+	--color-off-white: #fcfaf6;
 	--color-white: #ffffff;
 	--color-grey: #c0bbc4;
 	--color-vampire-black: #07100a;
