--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -4,7 +4,7 @@ $property: background;
 
 @include utilities.generate(bg-inherit, $property, inherit);
 @include utilities.generate(bg-vampire-black, $property, var(--color-vampire-black));
-@include utilities.generate(bg-ghost-white, $property, var(--color-ghost-white));
+@include utilities.generate(bg-off-white, $property, var(--color-off-white));
 @include utilities.generate(bg-white, $property, var(--color-white));
 @include utilities.generate(bg-grey, $property, var(--color-grey));
 @include utilities.generate(
