--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -1,11 +1,13 @@
 :root {
-	// https://www.color-name.com
-	--color-ghost-white: #fcfaf6;
+	// Figma color names
+	--color-off-white: #fcfaf6;
 	--color-white: #ffffff;
+	--color-blue: #3b00b9;
+	--color-dark: #0e002d;
+
+	// https://www.color-name.com
 	--color-vampire-black: #07100a;
-	--color-interdimensional-blue: #3b00b9;
 	--color-deep-violet: #1e005d;
-	--color-cetacean-blue: #0e002d;
 	--color-dark-slate-blue: #503a83;
 	--color-misty-rose: #937993;
 	--color-goldenrod: #dfa81b;
