--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -8,7 +8,7 @@
 
 	--negative-emphasis: var(--color-cyclamen);
 
-	--primary: var(--color-interdimensional-blue);
+	--primary: var(--color-blue);
 	--tertiary: var(--color-deep-violet);
 
 	--value-color: var(--color-vampire-black);
@@ -19,11 +19,11 @@
 
 	--animation-time-normal: 0.2s;
 
-	--progress-color: var(--color-interdimensional-blue);
+	--progress-color: var(--color-blue);
 	--progress-color-contrast: var(--color-white);
 	--progress-color-rgb: 59, 0, 185;
 
-	--overlay-background: var(--color-ghost-white);
+	--overlay-background: var(--color-off-white);
 	--overlay-background-contrast: var(--color-vampire-black);
 
 	--overlay-z-index: calc(var(--z-index) + 1);
