--- a/src/frontend/src/lib/styles/global/variables.scss
+++ b/src/frontend/src/lib/styles/global/variables.scss
@@ -15,6 +15,6 @@
 	--border-radius-sm: 10px;
 	--border-radius-lg: 32px;
 
-	// Overlays - based on --color-cetacean-blue
+	// Overlays - based on --color-dark
 	--backdrop: rgba(14, 0, 45, 0.6);
 }
