--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -4,15 +4,15 @@ $property: background;
 
 @include utilities.generate(bg-inherit, $property, inherit);
 @include utilities.generate(bg-vampire-black, $property, var(--color-vampire-black));
-@include utilities.generate(bg-ghost-white, $property, var(--color-ghost-white));
+@include utilities.generate(bg-off-white, $property, var(--color-off-white));
 @include utilities.generate(bg-white, $property, var(--color-white));
 @include utilities.generate(
-	bg-interdimensional-blue,
+	bg-blue,
 	$property,
-	var(--color-interdimensional-blue)
+	var(--color-blue)
 );
 @include utilities.generate(bg-deep-violet, $property, var(--color-deep-violet));
-@include utilities.generate(bg-cetacean-blue, $property, var(--color-cetacean-blue));
+@include utilities.generate(bg-dark, $property, var(--color-dark));
 @include utilities.generate(bg-dark-slate-blue, $property, var(--color-dark-slate-blue));
 @include utilities.generate(bg-misty-rose, $property, var(--color-misty-rose));
 @include utilities.generate(bg-goldenrod, $property, var(--color-goldenrod));
