feat(frontend): hero design and transactions routing (#103)

--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -2,6 +2,7 @@
 	// Figma color names
 	--color-off-white: #fcfaf6;
 	--color-white: #ffffff;
+    --color-grey: #c0bbc4;
 	--color-blue: #3b00b9;
 	--color-dark: #0e002d;
 
