--- a/src/frontend/src/lib/styles/global/layout.scss
+++ b/src/frontend/src/lib/styles/global/layout.scss
@@ -1,16 +1,13 @@
 @use '../mixins/media';
 
-main {
+main,
+.main {
 	margin: 0 auto;
 	padding: 0 var(--padding-2x);
 
-	@include media.min-width(small) {
-		max-width: media.$breakpoint-medium;
-	}
+	max-width: media.$breakpoint-small;
+}
 
-	&.in {
-		@include media.min-width(small) {
-			max-width: media.$breakpoint-small;
-		}
-	}
+header {
+	min-height: 75px
 }
