--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -5,9 +5,9 @@
     --color-grey: #c0bbc4;
 	--color-blue: #3b00b9;
 	--color-dark: #0e002d;
+	--color-dark-blue: #321469;
 
 	// https://www.color-name.com
-	--color-vampire-black: #07100a;
 	--color-deep-violet: #1e005d;
 	--color-dark-slate-blue: #503a83;
 	--color-misty-rose: #937993;
