--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -42,6 +42,7 @@ button {
 		justify-content: center;
 
 		background: var(--color-off-white);
+		color: var(--color-blue);
 
 		padding: var(--padding-1_5x) var(--padding-3x);
 	}
