style: review colors

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -39,7 +39,7 @@
 	--input-border-color: #e9e7e3;
 	--input-border-size: 1px;
 	--animation-time-short: 0.2s;
-	--secondary: var(--color-dark-slate-blue);
+	--secondary: var(--color-dark-blue);
 
 	// Modal
 
