--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -9,9 +9,9 @@
 	--negative-emphasis: var(--color-cyclamen);
 
 	--primary: var(--color-blue);
-	--tertiary: var(--color-deep-violet);
+	--tertiary: var(--color-dark);
 
-	--value-color: var(--color-vampire-black);
+	--value-color: var(--color-dark);
 
 	--border-radius-2x: var(--border-radius-lg);
 	--border-radius-0_5x: calc(0.5 * var(--border-radius-sm));
@@ -39,7 +39,7 @@
 	--input-border-color: #e9e7e3;
 	--input-border-size: 1px;
 	--animation-time-short: 0.2s;
-	--secondary: var(--color-dark-slate-blue);
+	--secondary: var(--color-dark-blue);
 
 	// Modal
 
@@ -81,7 +81,7 @@
 		--dialog-min-height: 554.25px;
 	}
 
-	--backdrop-contrast: var(--color-vampire-black);
+	--backdrop-contrast: var(--color-dark);
 	--backdrop-filter: blur(4px);
 }
 
@@ -102,4 +102,8 @@ div.input-field input[id] {
 
 div.input-field input[id]::placeholder {
 	color: rgba(0, 0, 0, 0.4);
+}
+
+div.modal {
+	color: var(--color-dark);
 }
