--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -11,4 +11,7 @@
 	// https://www.color-name.com
 	--color-goldenrod: #dfa81b;
 	--color-cyclamen: #ea6c99;
+
+	// Brand
+	--color-wallet-connect: #3b99fc;
 }
