style(frontend): spacing bottom

--- a/src/frontend/src/lib/styles/global/layout.scss
+++ b/src/frontend/src/lib/styles/global/layout.scss
@@ -3,7 +3,7 @@
 main,
 .main {
 	margin: 0 auto;
-	padding: 0 var(--padding-2x);
+	padding: 0 var(--padding-2x) var(--padding-3x);
 
 	max-width: media.$breakpoint-small;
 }
