style(frontend): header pointer events

--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -34,3 +34,4 @@
 @import './utilities/word-break';
 @import './utilities/line-height';
 @import './utilities/z-index';
+@import './utilities/pointer-events';
