feat(frontend): coming soon "add token" placeholder

--- a/src/frontend/src/lib/styles/global/colors.scss
+++ b/src/frontend/src/lib/styles/global/colors.scss
@@ -3,6 +3,7 @@
 	--color-off-white: #fcfaf6;
 	--color-white: #ffffff;
 	--color-grey: #c0bbc4;
+	--color-dust: #dbd9d6;
 	--color-blue: #3b00b9;
 	--color-dark: #0e002d;
 	--color-dark-blue: #321469;
