--- a/src/frontend/src/lib/styles/utilities/background.scss
+++ b/src/frontend/src/lib/styles/utilities/background.scss
@@ -5,6 +5,7 @@ $property: background;
 @include utilities.generate(bg-inherit, $property, inherit);
 @include utilities.generate(bg-off-white, $property, var(--color-off-white));
 @include utilities.generate(bg-white, $property, var(--color-white));
+@include utilities.generate(bg-dust, $property, var(--color-dust));
 @include utilities.generate(bg-grey, $property, var(--color-grey));
 @include utilities.generate(bg-blue, $property, var(--color-blue));
 @include utilities.generate(bg-dark, $property, var(--color-dark));
