--- a/src/frontend/src/lib/styles/utilities/color.scss
+++ b/src/frontend/src/lib/styles/utilities/color.scss
@@ -5,6 +5,7 @@ $property: color;
 @include utilities.generate(text-inherit, $property, inherit);
 @include utilities.generate(text-off-white, $property, var(--color-off-white));
 @include utilities.generate(text-white, $property, var(--color-white));
+@include utilities.generate(text-dust, $property, var(--color-dust));
 @include utilities.generate(text-grey, $property, var(--color-grey));
 @include utilities.generate(text-blue, $property, var(--color-blue));
 @include utilities.generate(text-dark, $property, var(--color-dark));
