style(frontend): block font display instead of swap

--- a/src/frontend/src/lib/styles/global/font-faces.scss
+++ b/src/frontend/src/lib/styles/global/font-faces.scss
@@ -4,7 +4,7 @@
 		url('/fonts/CircularXXWeb-Regular.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
-	font-display: swap;
+	font-display: block;
 }
 
 @font-face {
@@ -13,5 +13,5 @@
 		url('/fonts/CircularXXWeb-Bold.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
-	font-display: swap;
+	font-display: block;
 }
