style(frontend): primary contrast for gix elements

--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -9,6 +9,7 @@
 	--negative-emphasis: var(--color-cyclamen);
 
 	--primary: var(--color-blue);
+	--primary-contrast: var(--color-white);
 	--tertiary: var(--color-dark);
 
 	--value-color: var(--color-dark);
