--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -22,12 +22,14 @@ button {
 
 		background: var(--color-white);
 
-		border: 1px solid var(--color-blue);
+		border: 2px solid var(--color-blue);
 
 		padding: var(--button-padding);
 	}
 
 	&.labelled {
+		padding: var(--padding) var(--padding-4x) var(--padding) var(--padding-2x);
+
 		span {
 			display: block;
 			line-height: var(--line-height-small);
@@ -38,7 +40,6 @@ button {
 			}
 
 			span:last-child {
-				font-weight: var(--font-weight-bold);
 				font-size: var(--font-size-h5);
 				color: var(--color-dark-blue);
 			}
